2005-04-06  Inge Wallin  <inge@lysator.liu.se>

	Fix pie specific settings.
	* kchartConfigDialog.cc (constructor): Move all type specific
	settings immediately after the subtype page.
	(constructor): disable the piepage.
	* kchartParameterPieConfigPage.{h,cc} (explode): new member
	(init, apply): set and use explode.
	* kchartPieConfigPage (explose): Moved to kchartParameterPieConfigPage.
	
	Code cleaning
	* kchartConfigDialog.cc (constructor): order initializations
	logically
	(all): Fix indentation and other smaller stuff.
	* kchart_view.cc: Remove reduntant variable actionExtraCreateTemplate.

2005-04-05  Fredrik Edemar  <f_edemar@linux.se>
    * Use a better layout in KChartParameterPieConfigPage and KChartParameterPolarConfigPage.
    * Keyboard navigation when editing cells in the data editor.

2005-04-04  Fredrik Edemar  <f_edemar@linux.se>
    * Add the "Create Template From Document" feature to the File menu.
    * The activate-3D property is now the same for bar charts and pie charts so that it is possible to switch between those modes without loosing the setting (this is what the user expects IMHO).
    * The height of the 3D effect for pie charts was not always set in the config dialog and this is fixed now.
    * Bar chart mode: Do not show the flat arrows at the bottom of the lowest chart when dealing with negative numbers.
    * KChartPart::initNullChart() will now generate an empty chart instead of a chart containing 1 cell with the value 0.
    * KChartView::setupPrinter will not add the printing config page if it's only a preview.
    * Not modifying anything in the data editor and pressing OK should not do anything.

2005-04-03  Fredrik Edemar  <f_edemar@linux.se>
	Changes in the data editor:
    * If the data table only has 1 cell which is empty, the whole chart will be parsed as empty. This makes it possible for the user to clear all data.
    * Allow the user to set an empty string as row/column label.
